# ai-col

./: Cargo.toml  config.toml
src/: diagnostic_plugin.rs  main.rs
themes/: tiles.toml
